# black-book-browser

./: .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  buildinfo.json  eslint.config.js  esoextract3.code-workspace  gruntfile.js  icon.ai  package-lock.json  package-lock.json.license  package.json  svelte.config.js  tsconfig.json  tsconfig.json.license  tslint.json  vite.config.ts
.github/workflows/: build.yml
LICENSES/: LicenseRef-Patreon-2023.txt
resources/: app.html  package.json  patrons.json
resources/style/: style.css
scripts/: applyVersionToTauri.js  ionicComponentTypesToSvelte.js  update-patrons.js
src/: IonTabs.d.ts  app.d.ts  app.html  esoextract.ts  ionic-svelte.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: 128x128@2x.png.license  icon.icns
src-tauri/include/: ooz.h  stdafx.h
src-tauri/src/: bbb.rs  kraken.cpp  main.rs
src/frontend/: ContentViewer.ts  DDSHelper.ts  ExtractDialog.ts  FileSearch.ts  FileTree.ts  GameInstallManager.ts  Patreon.ts  filelist.ts
src/lib/: ContentEntry.ts  FileBrowser.svelte  FileBrowserEntry.svelte  FileBrowserEntryData.ts  FileEntry.ts  FileSearch.svelte  FileSearchEntry.ts  FolderEntry.ts  GameInstallEntry.ts  GameInstallManager.ts  MnfArchiveEntry.ts  StateManager.svelte.ts  StateManager.ts  esoextract.ts  svelte-virtual-list.d.ts
src/lib/assets/: patreon.svg.license  patrons.json
src/lib/backend/: BackgroundMessage.ts  BackgroundMessageTransceiver.ts  BackgroundMessageType.ts  BackgroundService.ts  BackgroundWorker.ts  BackgroundWorkerConfig.ts  worker.ts
src/lib/content/: CodeBlock.svelte  ContentLayout.svelte  ContentViewer.svelte  DetailEntry.svelte  ExtractDialog.svelte  ExtractDialogOptions.svelte  ExtractionOptions.ts  FileInfo.svelte  FileListPreview.svelte  FolderDetails.svelte  FolderInfo.svelte  GameInstallInfo.svelte  ImageViewer.svelte  MnfArchiveInfo.svelte  ignoredFilesFilterHelper.ts
src/lib/frontend/: ContentViewer.ts  DDSHelper.ts  ExtractDialog.ts  FileSearch.ts  FileTree.ts  FileTreeEntryType.ts  GameInstallManager.ts  MainMenu.svelte  Patreon.ts
src/lib/frontend/component/: CodeBlock.svelte  HexViewer.svelte  VirtualList.svelte
src/lib/mnf/: MnfArchive.ts  MnfArchiveFile.ts  MnfEntry.ts  MnfFileData.ts  MnfReader.ts
src/lib/tauri/: BackgroundTauriHelper.ts  BaseTauriHelper.ts  ForegroundTauriHelper.ts  TauriHelper.ts
src/lib/tree/: FileTree.svelte  FileTreeEntry.svelte  FileTreeEntryData.ts  FileTreeEntryDataProvider.ts
src/lib/util/: BufferReader.ts  ExternalTypes.ts  FileUtil.ts  SearchHelper.ts  ionic.ts
src/lib/utils/: common.ts
src/lib/zosft/: ZOSFileTable.ts  ZOSFileTableEntry.ts  ZOSFileTableReader.ts
src/mnf/: MnfArchive.ts  MnfArchiveFile.ts  MnfEntry.ts  MnfReader.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  welcome.svelte
src/routes/browse/: +page.svelte
src/routes/content/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/patrons/: +page.svelte
src/routes/search/: +page.svelte
src/theme/: variables.css
src/util/: BufferReader.ts  ExternalTypes.ts  FileUtil.ts  NodeHelper.ts  SearchHelper.ts
src/zosft/: ZOSFileTable.ts  ZOSFileTableEntry.ts  ZOSFileTableReader.ts
(+16 files in other folders)
