# SPDX-FileCopyrightText: 2024 sirinsidiator
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "black-book-browser"
version = "4.0.0"
description = "A Tauri App"
authors = ["sirinsidiator"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sirinsidiator/black-book-browser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
zune-inflate = "0.2.54"
num_cpus = "1.16.0"
work-queue = "0.1.4"
rust-ooz = { version = "1.0.0", git = "https://github.com/sirinsidiator/rust-ooz.git" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
