# SPDX-FileCopyrightText: 2024 sirinsidiator
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "black-book-browser"
version = "4.5.0"
description = "A Tauri App"
authors = ["sirinsidiator"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sirinsidiator/black-book-browser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zune-inflate = "0.2.54"
num_cpus = "1.17.0"
work-queue = "0.1.4"
rust-ooz = { version = "1.0.0", git = "https://github.com/sirinsidiator/rust-ooz.git" }
tauri-plugin-opener = "2.5.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
